fixed some styling issue closing gap on the right in mobile view

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ html, body {
   color: #666;
 }
 body::-webkit-scrollbar {
-  width: 0.7em;
+  width: 1em;
   background: #888;
 }
 body::-webkit-scrollbar-thumb {
@@ -59,7 +59,7 @@ body::-webkit-scrollbar-track-piece
 .ptext {
   position: absolute;
   top: 50%;
-  width: 100%;
+  width: 100vw;
   text-align: center;
   font-size: 40px;
   letter-spacing: 8px;
@@ -84,7 +84,7 @@ li {
   flex-direction: row;
   justify-content: center;
   margin-top: 100px;
-  padding: 20px;
+  padding: 20px 0;
   font-size: .6em;
 }
 .breadcrumbs a {
@@ -110,6 +110,7 @@ li {
   justify-content: center;
   flex-wrap: wrap;
 }
+
 .menu-div {
   background-color: white;
   border: .5px solid rgb(200,200,200);
@@ -145,38 +146,36 @@ li {
 /* Google iframe */
 .google-map-code iframe {
   box-shadow: 0 8px 16px -4px;
-  margin: 30px 0 60px -50px;
+  margin: 0 auto;
+  margin: 30px 0 30px;
   width: 80vw;
 }
 .about-container {
+  position: relative;
   display: flex;
   flex-direction: row;
   justify-content: center;
-  padding: 30px;
-  /* flex-wrap: wrap; */
+  margin-top: 40px;
 }
-.about-tessio-section {
-  display: flex;
-  flex-direction: column;
-  width: 450px;
-  margin-left: -50px;
+.about-tessio-section h2 {
+  margin-left: 40px;
 }
 .about-tessio-info li {
   padding: 5px;
-  margin-left: -40px;
 }
 .bold {
   font-weight: 600;
 }
+.about-tessio-links {
+  margin-top: -.5px;
+}
 /* About Tessio Links */
 .about-tessio-links li a {
-  margin: -30px 0 30px 40px;
   display: flex;
   flex-direction: row;
   align-items: center;
   color: #666;
-  padding: 3px;
-  width: 80%;
+  margin-bottom: 5px;
 }
 .about-tessio-links li a span {
   margin-left: 10px;
@@ -188,28 +187,30 @@ li {
   height: 40px;
 }
 
-@media(max-width:1500px) {
-  .menu-div {
+@media(max-width: 1500px) {
+  .three-column-view {
+    flex-basis: 50%;
+  }
+  .four-column-view {
     flex-basis: 50%;
   }
 }
 
 @media(max-width: 1000px) {
-  .menu-div {
+  .three-column-view {
     flex-basis: 100%;
   }
-  .google-map-code {
+  .four-column-view {
     flex-basis: 100%;
   }
   .about-container {
-    flex-wrap: wrap;
-    margin: 0 -50px -40px -50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
   .about-tessio-section {
-    margin: 0 0 30px 0;
-  }
-  .about-tessio-links li a {
-    margin-left: 70px;
+    margin-bottom: 40px;
   }
 }
 
@@ -217,45 +218,58 @@ li {
   .pimg1, .pimg2, .pimg3 {
       background-attachment: scroll;
   }
-  .ptext {
-    font-size: .8rem;
-  }
   .section h2 {
-    font-size: 1rem;
+    font-size: 1.2em;
+  }
+  .ptext {
+    font-size: .8em;
   }
   .section {
+    font-size: .8em;
+  }
+  .section p {
     margin: 0 -60px 0 -60px;
-    font-size: .9rem;
   }
-  .menu-container {
-    position: relative;
-    padding-top: 10px;
+  /* Menu Items */
+  .menu-list-container {
+    margin: 0 -70px 0 -70px;
   }
-  .menu-nav {
-    font-size: .7rem;
+  .menu-div ul {
+    margin: 0 60px 0 30px;
   }
-  .menu-div {
+  /* menu-columns */
+  .four-column-view {
     flex-basis: 100%;
   }
-  .menu-div ul li {
-    margin: 0 10px 0 -30px;
-  }
-  .menu-description {
-    padding-top: 6px;
+  .three-column-view {
+    flex-basis: 100%;
   }
   .menu-alcohol-spacing li {
-    border-bottom: none;
+    border: none;
   }
-  .google-map-code {
+  /* About Us */
+  .google-map-code iframe {
     display: none;
-  } 
-  .about-tessio-section {
-    flex-basis: 100%;
-    align-items: center;
-    margin: 0 -10px 30px -10px;
   }
-  .about-tessio-links li a {
-    font-size: .8rem;
-    margin: 0 100px 0 60px;
+  .about-container {
+    margin: 40px -70px 0 -70px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .about-tessio-section {
+    padding: 10px;
+  }
+  .about-tessio-section h2 {
+    margin-left: 5px;
+  }
+  .about-tessio-section li {
+    margin-left: -40px;
+  }
+  .about-tessio-links {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 }
